builder-derive/tests/compile_fail/enum_not_supported.rs
use builder_derive::Builder;

#[derive(Builder)]
enum MyEnum {
    Variant1,
    Variant2,
}

fn main() {}
